# lot49

./: .gitignore  .gitmodules  10.-acknowledgments.md  2.-overview.md  3.-concepts.md  4.-protocol-details.md  5.-safety.md  6.-incentive-economy.md  7.-analysis.md  8.-future-workuntitled.md  9.-conclusion.md  CMakeLists.txt  ImpliedTransaction.cpp  ImpliedTransaction.hpp  Ledger.cpp  MeshNode.cpp  MeshNode.hpp  README.md  SUMMARY.md  Utils.cpp  Utils.hpp  lot49.cpp  readme.md  references.md  undefined.md  untitled.md
appendix/: a_technical-overview..md  appendix-a.technical-overview.md  appendix-b.-incentive-headers.md  appendix-c.-implied-transactions-input-scripts.md  appendix-d.-bls-versus-schnorr.md  appendix-e.-transmission-overhead.md  b_incentive-headers.md  c_implied-transactions-input-scripts.md  d_bls-versus-schnorr.md  e_transmission-overhead.md
appendix-1/: appendix-a_technical-overview..md  appendix-d_bls-versus-schnorr.md  c_implied-transactions-input-scripts.md
doc/: transmission_overhead.md
protocol/: 01_introduction.md  02_overview.md  03_concepts.md  04_protocol-details.md  05_safety.md  06_incentive-economy.md  07_analysis.md  08_future-work.md  10_acknowledgments.md  protocol-02_overview.md  protocol-06_incentive-economy.md  protocol-07_analysis.md  protocol-08_future-work.md  references.md
zkp-hash/: hash.h  hash_impl.h  util.h
